######################################################################
#
# Makefile.am
#
######################################################################

SUBDIRS			= \
  src \
  debian \
  config \
  # THIS LINE INTENTIONALLY LEFT BLANK

EXTRA_DIST		= \
  bootstrap.sh \
  # THIS LINE INTENTIONALLY LEFT BLANK
